[package]
name = "hv-distance"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = { version = "4.4.7", features = ["derive"] }
colored = "2.0.4"
lazy_static = "1.4.0"
reqwest = { version = "0.11.22", features = ["blocking", "json"] }
serde = { version = "1.0.190", features = ["derive"] }
serde_json = "1.0.108"
