[package]
name = "hv-distance"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.75"
clap = { version = "4.4.7", features = ["derive"] }
lazy_static = "1.4.0"
log = "0.4.20"
regex = "1.10.2"
reqwest = { version = "0.11.22", features = ["blocking", "json"] }
serde = { version = "1.0.190", features = ["derive"] }
serde_json = "1.0.108"
simplelog = "0.12.1"
